# totem-bsp

./: .gitignore  README.md
examples/roboboard_x4_led_blink/: CMakeLists.txt
examples/roboboard_x4_led_blink/main/: CMakeLists.txt  idf_component.yml  main.c
examples/roboboard_x4_led_blink_cpp/: CMakeLists.txt
examples/roboboard_x4_led_blink_cpp/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/roboboard_x4_led_blink_mix/: CMakeLists.txt
examples/roboboard_x4_led_blink_mix/main/: main.cpp
examples/x3_board/: CMakeLists.txt
examples/x3_board/main/: CMakeLists.txt  ex_board.c  ex_dc.c  ex_gpio.c  ex_imu.c  ex_qwiic.c  ex_rgb.c  ex_servo.c  idf_component.yml  main.c
examples/x4_board/: CMakeLists.txt
examples/x4_board/main/: CMakeLists.txt  ex_board.c  ex_can.c  ex_dc.c  ex_gpio.c  ex_gpio_rev10.c  ex_imu.c  ex_qwiic.c  ex_rgb.c  ex_servo.c  idf_component.yml  main.c
roboboard_x3/: CMakeLists.txt  idf_component.yml  roboboard_x3.c  roboboard_x3_idf4.c  roboboard_x3_idf5.c  roboboard_x3_imu.c  roboboard_x3_rgb.c
roboboard_x3/include/bsp/: imu.h  rgb.h  roboboard_x3.h  totem-bsp.h
roboboard_x3/lib/: imu_interface.h  qmi8658.c  qmi8658.h
roboboard_x3/priv_include/: bsp_drivers.h
roboboard_x4/: CMakeLists.txt  Kconfig  idf_component.yml  roboboard_x4.c  roboboard_x4.cpp  roboboard_x4_can.c  roboboard_x4_idf4.c  roboboard_x4_idf5.c  roboboard_x4_imu.c
roboboard_x4/components/: bsp_adc.h  bsp_adc_idf4.c  icm20689.h  lsm6ds3.c  periph_driver.c  tbus.c
roboboard_x4/include/bsp/: can.h  imu.h  pin_map.h  roboboard_x4.h  roboboard_x4.hpp  totem-bsp.h
roboboard_x4/lib/: icm20689.c  icm20689.h  imu_interface.h  lsm6ds3.c  lsm6ds3.h  periph_driver.c  periph_driver.h  periph_regmap.h  tbus.c  tbus.h
roboboard_x4/priv_include/: periph_regmap.h
roboboard_x4/src/: bsp_adc_idf5.c
test/roboboard_x3/: CMakeLists.txt  sdkconfig.defaults
test/roboboard_x3/components/totem_test/include/: totem_test.h
test/roboboard_x3/main/: idf_component.yml  main.cpp  test_board.cpp  test_dc.cpp  test_imu.cpp  test_servo.cpp
test/roboboard_x4/: CMakeLists.txt  sdkconfig.defaults
test/roboboard_x4/components/totem_test/: CMakeLists.txt  totem_test.c
test/roboboard_x4/components/totem_test/include/: totem_test.h
test/roboboard_x4/main/: CMakeLists.txt  idf_component.yml  main.cpp  test_board.cpp  test_can.cpp  test_dc.cpp  test_imu.cpp  test_rgb.cpp  test_servo.cpp
